--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: whakaari_env
+name: aso_env
 channels:
   - defaults
   - conda-forge
@@ -15,4 +15,4 @@ dependencies:
   - scipy=1.3.1
   - statsmodels=0.10.2
   - pip
-prefix: /anaconda3/envs/whakaari_env
+prefix: /anaconda3/envs/aso_env
