--- a/environment.yml
+++ b/environment.yml
@@ -15,4 +15,7 @@ dependencies:
   - scipy=1.3.1
   - statsmodels=0.10.2
   - pip
+  - cudatoolkit=11.8 
+  - cuml=23.08        
+  - cupy  
 prefix: /anaconda3/envs/aso_env
