--- a/environment_cuda.yml
+++ b/environment_cuda.yml
@@ -1,7 +1,9 @@
-name: aso_12
+name: aso_cuda
 channels:
   - defaults
   - conda-forge
+  - nvidia
+  - rapidsai
 dependencies:
   - python=3.12
   - tsfresh=0.20.3
@@ -14,3 +16,9 @@ dependencies:
   - scipy=1.13.1
   - statsmodels=0.14.2
   - pip
+  - cudatoolkit=11.6
+  - cupy=13.3.0
+  - pip:
+    - xgboost==1.7.6
+    - lightgbm==4.0.0
+    - catboost==1.3.1
