--- a/environment_cuda.yml
+++ b/environment_cuda.yml
@@ -13,8 +13,7 @@ dependencies:
   - pandas=2.2.2
   - scipy=1.13.1
   - statsmodels=0.14.2
+  - py-xgboost # condaでのxgboost
+  - lightgbm    # condaでのlightgbm
+  - catboost   # condaでのcatboost
   - pip
-  - pip:
-    - xgboost==2.1.2
-    - lightgbm==4.5.0
-    - catboost==1.2.7
