--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: aso_12
+name: aso_env
 channels:
   - conda-forge
   - defaults
@@ -13,4 +13,7 @@ dependencies:
   - pandas=2.2.2
   - scipy=1.13.1
   - statsmodels=0.14.2
+  - py-xgboost 
+  - lightgbm   
+  - catboost 
   - pip
